--- a/style.css
+++ b/style.css
@@ -41,6 +41,9 @@ input[type='text']{
     border: 2px solid #858299;
     height: 50px;
     padding: 10px;
+    letter-spacing: 25px;
+    font-size: 30px;
+    text-align: center;
 }
 input[type='text']:focus {
     background-color: #3D4153;
@@ -103,4 +106,7 @@ color: #E0B612;
 .action-left {
     color: #FF3C5F;
     margin-top: 10px;
+}
+.notify {
+    display: none;
 }
