--- a/style.css
+++ b/style.css
@@ -98,6 +98,7 @@ color: #E0B612;
     margin-top: 20px;
     border-radius: 15px;
     padding: 5px 20px;
+    display: none;
 }
 .notify-section{
     width: 35%;
@@ -107,6 +108,7 @@ color: #E0B612;
     color: #FF3C5F;
     margin-top: 10px;
 }
-.notify {
+
+#try-text {
     display: none;
 }
